crates/wisphive_tui/tests/snapshots/detail_bash.snap
---
source: crates/wisphive_tui/tests/ui_snapshots.rs
expression: frame
---
┌ Review: Bash ────────────────────────────────────────────────────────────────────────────────────┐
│  Agent:    claude-a1b2c3 (claude_code)                                                           │
│  Project:  /tmp/wisphive-demo                                                                    │
│  Tool:     Bash                                                                                  │
│  Time:     [TIMESTAMP] (2h ago)                                                          │
│                                                                                                  │
│  Description: Run all workspace tests                                                            │
│                                                                                                  │
│  ── Command ──                                                                                   │
│                                                                                                  │
│  cargo test --workspace                                                                          │
│                                                                                                  │
│  ── Actions ──                                                                                   │
│                                                                                                  │
│  [Y] approve                                                                                     │
│  [N] deny                                                                                        │
│  [M] deny with message                                                                           │
│  [!] always allow                                                                                │
│  [E] edit input                                                                                  │
│  [C] add context                                                                                 │
│  [?] defer to native prompt                                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 [Y]approve [N]deny [M]deny+msg [!]always [E]edit [C]context [?]defer [[]prev []]next [j/k]scroll [S
